--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 :root
 {
   background-color: rgb(104, 84, 246);
-  background-image: rgb(225, 223, 238);
 }
 h1
 {
@@ -14,10 +13,15 @@ nav
   background-color:rgb(243, 197, 13);
   padding: 1em;
 }
+body
+{
+  font-family: Times New Roman, Georgia;
+}
 p
 {
   line-height: 1.6;
   margin: 1em 0;
+  color: white;
 }
 img
 {
