--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -1,16 +1,16 @@
 :root
 {
-  --UNC-Blue: #013c65;
-  --UNC-Gold: #f6b000;
-  --UNC-Gray: #8a8a8d;
+  --Blue: #2674B6;
+  --Gray: #CECECE;
+  --Red: #550101;
 }
 body
 {
-    background-color: var(--UNC-Gray);
+    background-color: var(--Blue);
 }
 *
 {
-    color: var(--UNC-Blue);
+    color: var(--Red);
     text-align: center;
 }
 h1
@@ -19,25 +19,25 @@ h1
 }
 nav
 {
-    border: 7px var(--UNC-Gold) solid;
+    border: 7px var(--Gray) solid;
     margin: 8vw;
     margin-top: 5px;
 }
 section
 {
-    border: 5px var(--UNC-Blue) solid;
+    border: 5px var(--Red) solid;
     margin: 18vw;
     margin-top: 30px;
 }
 .date
 {
-    color: var(--UNC-Gold);
+    color: var(--Gray);
     white-space: nowrap;
 }
 
 .date strong
 {
-    color: var(--UNC-Gold);
+    color: var(--Gray);
     white-space: nowrap;
 }
 ul
