--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -45,3 +45,8 @@ ul
     list-style: none;
     padding-left: 0px;
 }
+.medium-profile {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+              }
